@@ -251,7 +251,7 @@ ACE_SOCK_Connector::complete (ACE_SOCK_Stream &new_stream,
   // We failed to get connected.
   if (h == ACE_INVALID_HANDLE)
     {
-#if defined (ACE_WIN32)
+#if defined (ACE_NON_BLOCKING_BUG_DELAY) && ACE_NON_BLOCKING_BUG_DELAY > 0
       // Win32 has a timing problem - if you check to see if the
       // connection has completed too fast, it will fail - so wait
       // <ACE_NON_BLOCKING_BUG_DELAY> microseconds to let it catch up
@@ -261,14 +261,14 @@ ACE_SOCK_Connector::complete (ACE_SOCK_Stream &new_stream,
       h = ACE::handle_timed_complete (new_stream.get_handle (), tv);
       if (h == ACE_INVALID_HANDLE)
         {
-#endif /* ACE_WIN32 */
+#endif /* ACE_NON_BLOCKING_BUG_DELAY */
       // Save/restore errno.
       ACE_Errno_Guard error (errno);
       new_stream.close ();
       return -1;
-#if defined (ACE_WIN32)
+#if defined (ACE_NON_BLOCKING_BUG_DELAY) && ACE_NON_BLOCKING_BUG_DELAY > 0
         }
-#endif /* ACE_WIN32 */
+#endif /* ACE_NON_BLOCKING_BUG_DELAY */
     }
 
   if (remote_sap != 0)
